objects/IPMOpenCaseSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>AverageAge__c</fullName>
        <label>Average Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageAssignedToWorkAge__c</fullName>
        <label>Average Assigned To Work Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageDaysPastDue__c</fullName>
        <label>Average Days Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageDaysUntilDue__c</fullName>
        <label>Average Days Until Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageLeadTime__c</fullName>
        <label>Average Lead Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageWorkedToClosedAge_Days__c</fullName>
        <label>Average Worked to Closed Age (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfOpenCases__c</fullName>
        <label>Number Of Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeFormat__c</fullName>
        <label>Record Type - Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumOfAge__c</fullName>
        <label>Sum of Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumOfDaysPastDue__c</fullName>
        <label>Sum of Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumOfLeadTime__c</fullName>
        <label>Sum of Lead Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumOfOpportunityExpectedAssets__c</fullName>
        <label>Sum of Opportunity Expected Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumOfWorkedToClosedAge__c</fullName>
        <label>Sum of Worked to Closed Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumofAssignedToWorkAge__c</fullName>
        <label>Sum of Assigned To Work Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumofDaysUntilDue__c</fullName>
        <label>Sum of Days Until Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Snapshot of IPM Open Cases</description>
    <label>IPM Open Case Snapshot</label>
    <nameField>
        <displayFormat>OCS-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM Open Case Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>